k8s/manifests/ingress/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nemesis-basic-auth
  namespace: ${NAMESPACE}
  labels:
    app.kubernetes.io/part-of: nemesis
spec:
  basicAuth:
    secret: nemesis-basic-auth-secret
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nemesis-strip-hasura
  namespace: ${NAMESPACE}
  labels:
    app.kubernetes.io/part-of: nemesis
spec:
  stripPrefix:
    prefixes:
      - /hasura
